manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-db
  labels:
    app: school-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: school-db
    spec:
      containers:
      - name: postgresql
        image: registry.redhat.io/rhel8/postgresql-13
        ports:
          - containerPort: 5432
