manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-frontend
  template:
    metadata:
      labels:
        app: school-frontend
    spec:
      containers:
      - name: react-ui
        image: docker.io/yourusername/school-frontend:poc
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8080
