manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-db-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: school-db
