manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: school-frontend
