manifests/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-api-url
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 8080
  tls:
    termination: edge # Secures your API with HTTPS
