manifests/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: school-portal-url
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 8080
  tls:
    termination: edge # Enables automatic HTTPS
